# paragraph-detective

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  settings.ini
.github/workflows/: build_test.yml  python-publish.yml
data/: test.csv  train.csv
experiments/: .gitignore
experiments/random_forrest/0.1.0/: clf.joblib  metadata.yaml  test_error.csv  train_error.csv
experiments/xg/1.0/: clf.joblib  metadata.yaml
experiments/xgb/0.1.0/: clf.joblib  metadata.yaml  test_error.csv
experiments/xgb/1.0/: clf.joblib  metadata.yaml  test_error.csv
model/: clf.joblib
nbs/: data_prep.ipynb  model.ipynb  prepare.ipynb  train.ipynb
paragraph_detective/: _modidx.py  data_prep.py  model.py
test_data/: doc_a.txt
