[tool.poetry]
name = "paragraph-detective"
version = "0.1.0"
description = "A small library to find paragraphs in line separated text, such as when extracted from pdf text extractor."
authors = ["Jean Kunz <jean.kunz@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{ include = "paragraph_detective" }]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = ">=1.0"
build = "^0.10.0"


[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.22.0"
nbdev = "^2"
pandas = "^2.0"
flake8 = ">=6"
black = ">=23"
pytest = ">=7"
fastcore = "^1.5"
pre-commit = "^3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
